hphp/hack/test/typecheck/safe_abstract/needs_concrete_1.php.exp
WARN: File "needs_concrete_1.php", line 6, characters 5-17:
Unsafe call: `abs::Abs` might not exist because the receiver might be abstract. (Warn[12014])
ERROR: File "needs_concrete_1.php", line 4, characters 5-19:
Unrecognized user attribute: `__NeedsConcrete` starts with __ but is not a standard attribute (Naming[2049])
